--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.0",
