--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "curso-vite-vuetify-ts",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
+    "serve": "vite preview",
+    "build": "vite build",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "dev": "vite",
+    "format": "prettier .  --write",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
+    "roboto-fontface": "*",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "@vitejs/plugin-vue": "^3.0.0",
@@ -26,6 +32,8 @@
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
+    "vite-plugin-vuetify": "^1.0.0-alpha.0",
+    "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-eslint-parser": "^9.0.3",
     "vue-tsc": "^0.38.4"
   }
